[tool.poetry]
name = "spauditify"
version = "0.1.0"
description = ""
authors = ["Dom Batten <dominic.batten@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
spotipy = "^2.23.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
